Pulled some code from One long function into a short one

Preparations for Application font support on Symbian

Task-Number: QTBUG-6611